# Ros_Copilot

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  requirements.txt
.github/workflows/: ci.yml
docker/: Dockerfile  run.sh  web-demo.sh
docs/: ARCHITECTURE.md  DEV_SERVER_SETUP.md  ENVIRONMENT.md  GuideForBong.md  HOW_TO_RUN.md  LEARNING_GUIDE.md  QUICKSTART_WINDOWS.md  ROADMAP.md
eval/: README.md  agent_eval.py  agent_scenarios.md  judge.py  rag_eval.py
eval/datasets/: rag_eval.jsonl
ros2_copilot_ws/: README.md
ros2_copilot_ws/src/copilot_agent/: README.md  package.xml  setup.cfg  setup.py
ros2_copilot_ws/src/copilot_agent/copilot_agent/: agent.py  agent_cli.py  agent_node.py  config.py  ros_bridge.py  transcript.py
ros2_copilot_ws/src/copilot_agent/test/: test_transcript.py
ros2_copilot_ws/src/copilot_bringup/: CMakeLists.txt  README.md  package.xml
ros2_copilot_ws/src/copilot_bringup/config/: copilot_params.yaml
ros2_copilot_ws/src/copilot_bringup/launch/: copilot.launch.py  sim.launch.py
ros2_copilot_ws/src/copilot_cpp_demo/: CMakeLists.txt  package.xml
ros2_copilot_ws/src/copilot_cpp_demo/src/: listener.cpp
ros2_copilot_ws/src/copilot_executor/: CMakeLists.txt  package.xml
ros2_copilot_ws/src/copilot_executor/src/: executor.cpp  safety_monitor.cpp
ros2_copilot_ws/src/copilot_msgs/: CMakeLists.txt  package.xml
ros2_copilot_ws/src/copilot_msgs/action/: ExecuteCommand.action
ros2_copilot_ws/src/copilot_msgs/msg/: Heartbeat.msg
ros2_copilot_ws/src/copilot_msgs/srv/: Ask.srv  Query.srv
ros2_copilot_ws/src/copilot_py_demo/: package.xml  setup.cfg  setup.py
ros2_copilot_ws/src/copilot_py_demo/copilot_py_demo/: talker.py
ros2_copilot_ws/src/copilot_rag/: README.md  package.xml  setup.cfg  setup.py
ros2_copilot_ws/src/copilot_rag/copilot_rag/: ask.py  chunking.py  config.py  ingest.py  query_node.py  rag_engine.py  rerank.py  store.py
ros2_copilot_ws/src/copilot_rag/data/: nav2_costmap.md  ros2_concepts.md  ros2_qos.md
ros2_copilot_ws/src/copilot_rag/test/: test_chunking.py  test_rerank.py
ros2_copilot_ws/src/copilot_wiki/: README.md  package.xml  setup.cfg  setup.py
ros2_copilot_ws/src/copilot_wiki/copilot_wiki/: config.py  generate.py  introspect.py  wiki_gen.py
ros2_copilot_ws/src/copilot_wiki/test/: test_wiki.py
ros2_copilot_ws/tools/: llm_smoketest.py
web/: README.md
web/backend/: requirements.txt  server.py
web/frontend/: index.html
