<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>copilot_cpp_demo</name>
  <version>0.0.1</version>
  <description>Phase 0: rclcpp listener subscribing to Heartbeat (C++ side of the C++/Python demo).</description>
  <maintainer email="bong7233@users.noreply.github.com">bong</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>copilot_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
