<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>copilot_rag</name>
  <version>0.0.1</version>
  <description>Layer 1: RAG knowledge assistant exposed as a ROS2 service.</description>
  <maintainer email="batmantwo7233@gmail.com">bong</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>copilot_msgs</depend>

  <!-- Python deps (anthropic, chromadb) are installed via pip; see
       requirements.txt at the repo root. They are not rosdep keys. -->

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
