<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>copilot_wiki</name>
  <version>0.0.1</version>
  <description>Layer 3: LLM Wiki — introspect the live ROS2 graph and auto-generate grounded Markdown documentation.</description>
  <maintainer email="bong7233@users.noreply.github.com">bong</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>

  <!-- Python dep (anthropic) via pip; see requirements.txt. -->

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
